--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -970,11 +970,14 @@ body.top-down .top-down-wrapper{
 .topdown-search-main-container .search-input-box .live_search_result_box .auto_query_box {
   border-bottom: 1px solid var(--sdk-border-porcelain-color);
   padding: 0 25px;
-  margin-bottom: 2px;
+  margin-bottom: 0px;
+  position: relative;
+  z-index: 2;
+  background: #fff;
 }
 .topdown-search-main-container .search-input-box .live_search_result_box .auto_query_box .suggestion-box {
-  padding: 1px 0px 1px 11px;
-  margin: 10px 0;
+  padding: 10px 0px 10px 11px;
+  margin: 0;
   position: relative;
   color: var(--sdk-dusty-gray-color);
   cursor: pointer;
