fix for FLY-2944

--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -248,7 +248,7 @@
             </div>
         </div>
         <div class="bottom_sec">
-            <div class="group-checkbox mb-3">
+            <div class="group-checkbox mb-3 add-fields-checkbox">
                 <div class="label-text mb-2">{{'fields.select_ones_that_apply' | translate}}</div>
                 <div class="kr-sg-checkbox">
                     <input id="checkbox_grpfd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isMultiValued">
