--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -181,6 +181,7 @@
             }
         }
     }
+  
 }
 .empty-list{
     width: 320px;
@@ -279,8 +280,6 @@ perfect-scrollbar .ps--active-y{
 }
 
 
-
-
 ::ng-deep .kr-modal{
     &.kr-center{
         &.smallModal{
@@ -290,6 +289,11 @@ perfect-scrollbar .ps--active-y{
                     height: 430px !important;
                     .modal-content{
                         border-radius: 8px !important;
+                    }
+                    .add-fields-checkbox{
+                        .kr-sg-checkbox{
+                            padding-right: 25px !important;
+                        }
                     }
                 }
             }
