issue fixed in teams

--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -2207,7 +2207,7 @@ and open the template in the editor.
         position: absolute;
         left: 11px;
         top: 10px;        
-        cursor: pointer;
+        //cursor: pointer;
     }
 }
 
