accordion , autosuggestion multiple calls issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -8228,7 +8228,10 @@ html , body{
     font-size: 14px;
     font-weight: bold;    
   }
-
+  .searchAssist-kore-chat-window .accordion.best-match ~ .panel {
+    overflow: initial;
+    max-height: 100%;
+  }
   .widget-icon {
     position: absolute;
     bottom: 11px;
