--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -370,23 +370,21 @@
                     border-radius: 4px;
                     display: flex;
                     flex-wrap: wrap;
-                    padding: 10px;
-                    margin: 20px -13px;
-                    width: 982px;
-                    .info_img{
-
-                    }
+                    padding: 10px 35px 10px 10px;
+                    align-items: center;
+                    position: relative;                                                           
                     .bubnle-info{
                         color: #07377F;
                         font-weight: normal;
                         font-size: 12px;
                         line-height: 15px;
-                        margin-left: 10px;
-                        margin-top: 3px;
+                        padding-left: 10px;
                     }
-                    .img{
-                        position: relative;
-                        left: 340px;
+                    .close-info{
+                        position: absolute;
+                        right: 12px;
+                        top: 11px;
+                        cursor: pointer;
                     }
                     .know-more-data{
                         color: #0D6EFD;
