--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -605,11 +605,11 @@ div.divBlockEmptylastChild:first-child {
 .info_header_dropdown_content{
     background: #FFFFFF;
     box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
-    border-radius: 8px;
-    padding: 17px 10px;
-    border: 0;
-    margin: 11px 0 0 0;
-    width: 325px; 
+    border-radius: 8px !important;
+    padding: 15px 10px !important;
+    border: 0 !important;
+    margin: 11px 0 0 0 !important;
+    width: 325px !important; 
     &.ml-58{
         margin-left: 58px;
     }
@@ -618,13 +618,13 @@ div.divBlockEmptylastChild:first-child {
         position: absolute;
         width: 12px;
         height: 12px;
-        right: 67px;
+        right: 12px;
         top: -5px;
         background: #FFFFFF;
         transform: rotate(-45deg);
     }     
     &.w-274px{
-        width: 230px;
+        width: 230px !important;
         &::before{
             content: "";
             position: absolute;
@@ -653,6 +653,7 @@ div.divBlockEmptylastChild:first-child {
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+            min-height: 16px;
         }
     }
 }
