--- a/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.scss
+++ b/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.scss
@@ -51,6 +51,10 @@
     .p-right{
         cursor: pointer;
     }
+    .custom-disable {
+        cursor: not-allowed !important;
+        opacity: 0.5 !important;
+    }
 }
 
 
