fix for FLY-2940

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -14610,3 +14610,6 @@ margin-bottom: 15px !important;
     width: 434px !important;
     display: block !important;
 }
+.click-to-navigate-url, .click-to-navigate-url div{
+    cursor: pointer !important;
+}
