--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -27,7 +27,7 @@
             <div class="col-4 p-0 title-header">{{"credentials.manage_credentials" | translate}}</div>
              <div class="col-8 right-sec p-0">                           
                     <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
-                        <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" (focusout)="focusoutSearch();" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                        <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                         (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                     <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchcredential">
                     <img class="close-icon" *ngIf="searchcredential" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchcredential}"  (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="searchcredential='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
