--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -5,7 +5,7 @@
         <div class="d-flex align-items-center" *ngIf="enableSearchBlock">
             <div class="kr-sg-input-search m-0" [ngClass]="{'d-none': !searchActive}">
                 <input type="text" placeholder="Search" class="input-search" (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchText,'pl-2':searchText}" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter"
-                    autocomplete="off" id="inputSearch" [(ngModel)]="searchText" (focusout)="focusoutSearch();"
+                    autocomplete="off" id="inputSearch" [(ngModel)]="searchText" 
                     (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'"
                     (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
