--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -13,7 +13,7 @@
                 <div class="title">{{'traits.traits' | translate}}</div>
                 <div class="d-flex align-items-center" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
                     <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
-                        <input type="text" placeholder="Search" maxlength="60" id="inputSearch" class="input-search" [ngClass]="{'pl-33':!serachTraits,'pl-2':serachTraits}" autocomplete="off" [(ngModel)]="serachTraits" (focusout)="focusoutSearch();" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                        <input type="text" placeholder="Search" maxlength="60" id="inputSearch" class="input-search" [ngClass]="{'pl-33':!serachTraits,'pl-2':serachTraits}" autocomplete="off" [(ngModel)]="serachTraits"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                             (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                         <img [src]="searchImgSrc" class="search-icon" *ngIf="!serachTraits">
                         <img class="close-icon" *ngIf="serachTraits" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':serachTraits}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="serachTraits='';"  placement="top-center" container='body' ngbTooltip="{{'traits.cancel' | translate}}" tooltipClass="ngb_tooltip_custom_class sampleJson">
