--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1592,7 +1592,9 @@ float: right;
   z-index:-1 !important;
 }
 
-
+.sdk-top-down-interface .searchAssist-kore-chat-window.search-container.conversation #searchChatContainer .messageBubble .messageBubble-content .botImg {
+  display: none !important;
+}
 .sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .messageBubble .botMessage{
   background: var(--sdk-bg-athens-gray-color);
   box-shadow: 0px 1px 3px rgb(0 0 0 / 25%);
@@ -1605,6 +1607,7 @@ float: right;
   line-height: 14px;
   min-height: auto;
   margin-bottom: 8px;
+  margin-left: 0px !important;
 }
 
 .sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .messageBubble .botMessage span{
