--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -66,16 +66,16 @@
                 </div>
     
     
-                <div class="table-body-content row m-0 align-items-center d-none" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']">                
+                <div class="table-body-content row m-0 align-items-center d-none" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" (click)="viewDetails(data)">                
                      <!-- (click)="viewDetails(data)" -->
                     <div class="col-2 title">{{data.appName}}</div>
                     <div class="col-3 title">{{data.appUsage || '---'}}</div> 
                     <div class="col-3 title api-scope-data d-none" >
-                        <div class="name-scope text-truncate" *ngIf="data.scope &&  data.scope[2]">{{data.scope[2].scopes}}</div>
+                        <div class="name-scope text-truncate" *ngIf="data.scope &&  data.scope[2]">{{data.scope[2].scopes[0]}}</div>
                         <!-- [container]="'body'" -->
                         <div class="kr-sg-dropdowns" #apiScopesDropdown='ngbDropdown' (click)="stopPropagationOfViewDetails($event)" ngbDropdown [placement]="'right-top'">                                        
                             <div class="dropdown dropdown-open" >
-                                <button class="dropdown-toggle dropdown-input" *ngIf="data.scope &&  data.scope[2] && data.scope[2].scopes.length" ngbDropdownToggle>+{{data.scope[2].scopes.length}}</button>           <!-- {{showApiScopes.length}} -->                                
+                                <button class="dropdown-toggle dropdown-input" *ngIf="data.scope &&  data.scope[2] && data.scope[2].scopes.length" ngbDropdownToggle>+{{data.scope[2].scopes.length - 1}}</button>           <!-- {{showApiScopes.length}} -->                                
                                 <ul class="dropdown-menu content-menu api-scopes-manage-credentials-dropdown p-0" ngbDropdownMenu>                                
                                     <div class="api-scope-dropdown-content">
                                         <div class="header-sec-dropdown">
@@ -86,8 +86,8 @@
                                         </div>
                                         <perfect-scrollbar class="scroll-data" >
                                             <div class="data-scroll">
-                                                <ng-container *ngIf="data.scope &&  data.scope[2]">
-                                                <div class="scope-sec-title"  *ngFor="let childData of data.scope[2].scopesObj">
+                                                <ng-container *ngIf=" data.customScopeObj && data.customScopeObj[0] && data.customScopeObj[0].arr">
+                                                <div class="scope-sec-title"  *ngFor="let childData of data.customScopeObj[0].arr">
                                                     <div class="scope-name">{{childData.scopeTitle}}</div>
                                                     <div class="scope-desc">{{childData.scopeDesc}}</div>
                                                 </div>
