--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -28,7 +28,7 @@
                 <input type="text" maxlength="60" placeholder="Search" id="fieldSearchId" class="input-search"  [ngClass]="{'pl-33':!searchteam,'pl-2':searchteam}" autocomplete="off" [(ngModel)]="searchteam"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
             <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchteam">
-            <img class="close-icon" *ngIf="searchteam" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchteam}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="searchteam='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
+            <img class="close-icon"  src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchteam}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
             </div> 
               <div class="searchBlock" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')">
                 <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
