FLY-3015 issue fixed

--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -180,7 +180,7 @@
          }         
           
      .add-synonyms-inputs{
-        margin: 0 10px;
+        margin: 0 20px 0 45px;
         .input-group-items{            
             box-sizing: border-box;           
             justify-content: space-between;
